# RCloneGUI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/common/: __init__.py  auto_start.py  config.py  logger.py  signal_bus.py
app/core/: __init__.py  bootstrap.py  config_manager.py  mount_manager.py  rclone.py  scheduler.py  sync_manager.py
app/models/: __init__.py  mount.py  remote.py  sync_task.py
app/providers/: __init__.py  ftp.py  s3.py  sftp.py  smb.py  webdav.py
app/views/: browser_interface.py  download_overlay.py  home_interface.py  main_window.py  mount_interface.py  remote_interface.py  settings_interface.py  sync_interface.py
docs/changelog/: v0.0.1.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.2.4.md  v1.2.5.md
installer/: RCloneGUI.iss  requirements.txt
tests/: conftest.py  test_auto_naming_dialog.py  test_auto_start.py  test_browser_settings_views.py  test_cmdline_parser_properties.py  test_common.py  test_config.py  test_config_manager.py  test_discover_filter_properties.py  test_discovered_mount_ui.py  test_edge_cases.py  test_generate_remote_name.py  test_logger.py  test_main.py  test_models.py  test_mount_manager.py  test_mount_manager_deep.py  test_mount_manager_discover.py  test_mount_model_properties.py  test_provider_registry.py  test_rclone.py  test_remote_oauth_deep.py  test_scheduler.py  test_scheduler_deep.py  test_sync_manager.py  test_sync_manager_deep.py  test_sync_mount_views.py  test_views_basic.py  test_webdav_url_lock.py  test_webdav_vendor_properties.py
(+4 files in other folders)
