[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RCloneGUI"
version = "1.2.3"
description = "RClone GUI Application based on PySide6 and Fluent Widgets"
readme = "README.md"
requires-python = "=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Output coverage to tests/htmlcov and cache to tests/.pytest_cache
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html:tests/htmlcov --cov-fail-under=0"
qt_api = "pyside6"
cache_dir = "tests/.pytest_cache"
# Filter out deprecation warnings from third-party libraries
filterwarnings = [
    "ignore::DeprecationWarning:qframelesswindow.*",
    "ignore::DeprecationWarning:PySide6.*",
]
